--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,8 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Install dependencies
+      run: sudo apt-get install libasound2-dev libudev-dev pkg-config
     - name: Build
       run: go build -v ./...
 
