--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,16 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-latest
+          - os: macos-latest
+          - os: windows-latest
+
     steps:
     - uses: actions/checkout@v3
 
@@ -19,7 +28,8 @@ jobs:
         go-version: 1.19
 
     - name: Install dependencies
-      run: sudo apt-get install libasound2-dev libudev-dev pkg-config
+      run:  sudo apt-get install libasound2-dev
+      if: matrix.os == 'ubuntu-latest'
     - name: Build
       run: go build -v ./...
 
