--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,15 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Install dependencies
+      run:  sudo apt-get install libasound2-dev
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3.2.0
