--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,8 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
-
+          check-latest: true
+          cache: true
       - name: Install dependencies
         run: sudo apt-get install libasound2-dev
         if: matrix.os == 'ubuntu-latest'
