--- a/.goreleaser-for-linux.yaml
+++ b/.goreleaser-for-linux.yaml
@@ -1,12 +1,7 @@
 builds:
   - main: ./cmd/
-  - binary: somafm
+    binary: somafm
     goos:
       - linux
     goarch:
       - amd64
-      - arm64
-    env:
-      - CGO_ENABLED=0
-    flags:
-      - -mod=vendor
