--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,10 +65,5 @@ jobs:
                   system "go", "build", "-o", bin/"somafm", "./cmd/somafm.go"
                 end
           update_readme_table: true
-          # Skips committing the generated formula to a homebrew tap (useful for local testing).
-          # Default is shown - boolean.
           skip_commit: false
-
-          # Logs debugging info to console.
-          # Default is shown - boolean.
-          debug: true
+          debug: false
